<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:id="@+id/fragment_login"
    tools:context="se.orw.inlamning1.LoginFragment">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/firstName"
        android:id="@+id/etFirstName"
        android:layout_gravity="center_horizontal|top"
        android:inputType="textPersonName"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/lastName"
        android:id="@+id/etLastName"
        android:layout_below="@id/etFirstName"
        android:inputType="textPersonName"
        android:layout_centerHorizontal="true"/>

    <se.orw.inlamning1.LoginButton
        custom:label="@string/login"
        custom:imageID="@drawable/ic_launcher"
        android:layout_width="100sp"
        android:layout_height="50sp"
        android:id="@+id/btnLogin"
        android:layout_below="@id/etLastName"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
